Fixed some layout issues

--- a/src/styles/modules/_change.css
+++ b/src/styles/modules/_change.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    margin-top: 40px;
 
 
     &__container{
