--- a/src/styles/modules/_trade-history.css
+++ b/src/styles/modules/_trade-history.css
@@ -17,7 +17,7 @@
     }
 
     &__container{
-        margin-top: 30px;
+        margin-top: 40px;
     }
 
     &__price{
